adding images everywhere

--- a/src/pug/home/team/advisors.pug
+++ b/src/pug/home/team/advisors.pug
@@ -22,33 +22,57 @@ div(css-module='team.advisors.row')
     name: 'Ari Emanuel',
     title: 'Co-Founder & Co-CEO @ WME IMG'
   })
+    p “This project will revolutionize the way that 3D assets and their respective digital rights are transferred and distributed across people and entities. OTOY is transforming their state-of-the-art expertise for rendering into a decentralized network that will cater to a wider audience.”
   +advisor({
     name: 'J.J. Abrams',
-    title: 'Chairman & CEO @ Bad Robot Productions'
+    title: 'Chairman & CEO @ Bad Robot Productions',
+    img: 'jj.png',
   })
+    p TBD
   +advisor({
     img: 'brendan.png',
     name: 'Brendan Eich',
     title: 'Founder & CEO @ Brave Software & BAT'
   })
+    p “As an advisor to OTOY since the beginning, I applaud their new architecture for transactions and security. The Render Token is by far the most interesting project that I've seen in the space, as there is already a vigorous market for the service, dominated by OTOY, that can be rationalized and harvested through blockchain technology.”
   +advisor({
     img: 'george.png',
     name: 'George Gilder',
     title: 'Founder & Partner @ Gilder Technology Fund'
   })
+    p “Modeling virtual worlds is enormously exciting but modeling the actual Universe is even better. In the future, by leveraging spare computing cycles worldwide through blockchain, OTOY’s next phase could open up the possibility of furthering scientific research through significant advances in our modeling of the Universe.”
   +advisor({
     name: 'Jennifer Zhu Scott',
+    img: 'jennifer.png',
     title: 'Principal @ Radian & Council Member @ WEF'
   })
+    p “In a world where originality, creativity, and deep talent don't always come from the most obvious places, the RNDR token can bring cutting-edge rendering tools to empower countless content creators and users. In BRIC countries and other emerging markets, the decentralized nature of this blockchain technology makes the RNDR network's impact exponential. The dawn of a new form of creative economy is here, and here to stay.”
   +advisor({
     name: 'Demian Brener',
-    title: 'Co-Founder & CEO @ Zeppelin Solutions'
+    title: 'Co-Founder & CEO @ Zeppelin Solutions',
+    img: 'demian.jpg'
   })
+    p Demian is co-founder and CEO of Zeppelin Solutions.
+    p He sets the strategic direction of OpenZeppelin and zeppelinOS, and leads Zeppelin Solution's auditing and consulting business.
+    p Demian has been active in the space since the early days and pioneered the first implementation of Bitcoin's payment channel protocol - Streamium.
+    p His work has been featured in major publications including Forbes, Bloomberg and Techcrunch, and industry-specific publications including 'Blockchains in the Mainstream' book and 'A Securities Law Framework for Blockchain Tokens'
   +advisor({
     name: 'Manuel Araoz',
-    title: 'CTO @ Zeppelin Solutions & Partner @ INB'
+    title: 'CTO @ Zeppelin Solutions & Partner @ INB',
+    img: 'manuel.jpg'
   })
+    p Manuel has been working with smart contracts for the past 4 years, building popular apps and libraries in the space (Proof of Existence, Streamium, Bitcore and Decentraland).
+    p He's currently CTO at Zeppelin Solutions and lead developer of OpenZeppelin, an open-source framework to build secure smart contracts in Ethereum.
+    p He's also advisor to several high-profile projects in the blockchain industry, and a partner at INBlockchain.
   +advisor({
     name: 'Ari Meilich',
-    title: 'CEO & Project Lead @ Decentraland'
+    title: 'Project Lead @ Decentraland',
+    img: 'ariel.png'
   })
+    p TBD
+  +advisor({
+    name: 'David Vorick',
+    title: 'CEO, Cofounder, Core Developer @ Sia.tech',
+    img: 'david.png'
+  })
+    p TBD
