--- a/src/pug/home/team/core.pug
+++ b/src/pug/home/team/core.pug
@@ -21,6 +21,7 @@ div(css-module='team.core.container')
     })
     +core({
       name: 'Akram Abdou',
+      img: 'akram.jpg',
       title: 'Project Manager'
     })
     +core({
@@ -34,10 +35,12 @@ div(css-module='team.core.container')
       title: 'Developer'
     })
     +core({
-      name: 'Time Maclean',
+      name: 'Tim Maclean',
+      img: 'tim.jpg',
       title: 'Developer'
     })
     +core({
       name: 'Daniel Torres',
-      title: 'Developer'
+      title: 'Developer',
+      img: 'daniel.jpg'
     })
