--- a/src/pug/home/team/founders.pug
+++ b/src/pug/home/team/founders.pug
@@ -25,6 +25,9 @@ div(css-module='team.founders.row')
     extra: 'Co-Founder @ OTOY',
     supreme: true
   })
+    p Jules sets the strategic vision for OTOY, and is the chief architect of the company’s technology roadmap. Widely hailed as a pioneer in computer graphics, streaming and 3D rendering with over 25 years of industry experience.
+    p He made his first game, at 18, and went on to make the web’s first 3D video game platform and licensed the software to Macromedia, Disney, Warner Brothers, Nickelodeon, Microsoft, Hasbro and AT&T.
+    p His life’s work has been to revolutionize 3D content capture, creation and delivery.
   +vip({
     img: 'alissa.png',
     name: 'Alissa Grainer',
@@ -32,3 +35,6 @@ div(css-module='team.founders.row')
     extra: 'Co-Founder @ OTOY',
     supreme: true
   })
+    p Alissa sets the strategic direction of OTOY and leads all operations. For nearly a decade, her passion has been to take the genius of OTOY’s patents and research and bring them to the mass market. She spearheads the company's activities worldwide and drives all partnerships, financings, and acquisitions.
+    p In the last 18 months alone, Alissa led key deals with Facebook and Unity to bring OTOY’s technology to billions of consumers. She also closed strategic partnerships with HBO, Disney, Discovery Communications, Mattel, Liberty Media and Madison Square Garden Group.
+    p Prior to OTOY, Alissa started a venture fund with technology writer, George Gilder, which invested in startup and mid-stage technology companies. Alissa graduated Magna Cum Laude from Georgetown University.
