--- a/src/assets/styles/main/team/core.scss
+++ b/src/assets/styles/main/team/core.scss
@@ -32,6 +32,13 @@
     margin-bottom: 27px;
   }
 
+  img {
+    border-radius: 5px;
+    &.rounded {
+      border-radius: 50%;
+    }
+  }
+
   h4 {
     font-family: $lato;
     font-size: 16px;
