adding press links

--- a/src/pug/home/press.pug
+++ b/src/pug/home/press.pug
@@ -1,6 +1,7 @@
-mixin press(name)
+mixin press(name, link)
   div(css-module='home.press.media')
-    +svg(name)
+    a(href=link)
+      +svg(name)
 
 section#press(css-module='home.press.wrapper')
   div(css-module='home.press.container')
@@ -8,10 +9,11 @@ section#press(css-module='home.press.wrapper')
     p(css-module='home.press.large') Media that rendered us valuable.
 
     div(css-module='home.press.row')
-      +press('forbes')
+      +press('forbes', 'https://www.forbes.com/sites/moorinsights/2017/09/15/render-token-the-future-currency-of-the-metaverse/#4050516e201e')
       div(css-module='home.press.media')
-        +img('venturebeat.png')
-      +press('yahoo')
-      +press('fxguide')
-      +press('variety')
-      +press('nasdaq')
+        a(href='https://venturebeat.com/2017/09/09/otoy-is-planning-a-blockchain-peer-to-peer-gpu-rendering-network/')
+          +img('venturebeat.png')
+      +press('yahoo', 'https://finance.yahoo.com/news/weconvene-joins-forces-render-token-182000189.html')
+      +press('fxguide', 'https://www.fxguide.com/featured/more-than-a-token-effort-at-rendering-with-blockchain/')
+      +press('variety', 'http://variety.com/2017/digital/news/otoy-blockchain-token-rndr-1202548625/')
+      +press('nasdaq', 'http://www.nasdaq.com/article/otoy-plans-to-raise-134-million-via-token-sale-for-blockchain-powered-cloud-rendering-exclusive-cm841783')
