--- a/src/pug/home/partners.pug
+++ b/src/pug/home/partners.pug
@@ -22,15 +22,18 @@ section#partners(css-module='home.partners.wrapper')
         +partner({
           icon: 'decentraland',
           name: 'Decentraland',
-          copy: 'A blockchain-based virutal reality world.'
+          copy: 'A blockchain-based virutal reality world.',
+          url: 'https://decentraland.org'
         })
         +partner({
           icon: 'sia',
           name: 'Sia',
-          copy: 'Decentralized storage platform secured by blockchain.'
+          copy: 'Decentralized storage platform secured by blockchain.',
+          url: 'https://sia.tech'
         })
         +partner({
           icon: 'bat',
           attention: true,
-          copy: 'Introducing blockchain-based digital advertising.'
+          copy: 'Introducing blockchain-based digital advertising.',
+          url: 'https://basicattentiontoken.org'
         })
