adding rocket chat links

--- a/src/pug/home/ctas.pug
+++ b/src/pug/home/ctas.pug
@@ -12,6 +12,6 @@ section#ctas(css-module='home.ctas.wrapper')
       div(css-module='home.ctas.half')
         h4(css-module='home.ctas.title') Join the community at Rocket.Chat
 
-        a(href="#" title="Launch Rocket Chat" css-module="home.ctas.chat")
+        a(href="https://rendertoken.rocket.chat" title="Launch Rocket Chat" css-module="home.ctas.chat")
           +svg('rocket')
           span Launch Rocket Chat
