--- a/src/pug/home/footer.pug
+++ b/src/pug/home/footer.pug
@@ -12,7 +12,7 @@ footer#footer(css-module='home.footer.wrapper')
           +svg('dash')
 
         ul(css-module='home.footer.social')
-          li: a(href="#")
+          li: a(href="https://rendertoken.rocket.chat")
             div: +svg('rocket-foot')
             span Rocket.Chat
           li: a(href="https://twitter.com/rendertoken")
@@ -36,7 +36,7 @@ footer#footer(css-module='home.footer.wrapper')
           +svg('dash')
 
         ul(css-module='home.footer.links')
-          li(css-module='home.footer.desk'): a(href='#')
+          li(css-module='home.footer.desk'): a(href='#intro')
             span Watch Intro Video
             +svg('play-mini')
           li: a(href="index#about") About
