--- a/src/pug/home/menu.pug
+++ b/src/pug/home/menu.pug
@@ -28,6 +28,6 @@ header(css-module="home.menu.header")
         li: a(href="https://www.reddit.com/r/RenderToken/"): +svg('reddit')
         li: a(href="https://medium.com/render-token"): +svg('medium')
 
-      a(href="#" title="Launch Rocket Chat" css-module="home.menu.cta")
+      a(href="https://rendertoken.rocket.chat" title="Launch Rocket Chat" css-module="home.menu.cta")
         +svg('rocket')
         span Launch Rocket Chat
