tba token sale details

--- a/src/pug/home/sale/technicals.pug
+++ b/src/pug/home/sale/technicals.pug
@@ -25,11 +25,11 @@ div
         })
         +table({
           title: 'Hardcap',
-          copy: '10,000,000 USD'
+          copy: 'TBA'
         })
         +table({
           title: 'Token Supply',
-          copy: '40,000,000 RNDR'
+          copy: 'TBA'
         })
         +table({
           title: 'Price',
@@ -37,13 +37,13 @@ div
         })
         +table({
           title: 'Funding',
-          copy: 'Ethereum (ETH)'
+          copy: 'Ether (ETH)'
         })
         +table({
           title: 'Starts',
-          copy: 'April 14, 2018 (9:00 AM, New York, EST)'
+          copy: 'TBA'
         })
         +table({
           title: 'Ends',
-          copy: 'February 28, 2018 (11:59 PM, New York, EST)'
+          copy: 'TBA'
         })
