static navigation on faqs page

--- a/src/pug/faqs.pug
+++ b/src/pug/faqs.pug
@@ -7,9 +7,13 @@ block content
     include faqs/header
     include faqs/navigation
     include faqs/accordion
+    +nav1
     include faqs/general
+    +nav2
     include faqs/value
+    +nav3
     include faqs/token
+    +nav4
     include faqs/post
   include home/footer
   include home/copyright
