--- a/src/pug/faqs/general.pug
+++ b/src/pug/faqs/general.pug
@@ -1,7 +1,37 @@
 section#general
   .container-620
     +faq('Where can I find more information on RNDR?')
+      p Please find the links to various resources below:
+      p: a(href='https://account.otoy.com/sign_up') RNDR (product)
+      p: a(href='https://home.otoy.com/the-company/') OTOY
+      p: a(href='https://rendertoken.com/pdf/1.7RenderTokenWhitepaper.pdf') Whitepaper
     +faq('Are there any communication channels?')
+      h6 Telegram (Official Announcements)
+      p: a(href='https://www.t.me/rendertoken') https://www.t.me/rendertoken
+      h6 Rocket Chat
+      p: a(href='https://rendertoken.rocket.chat') https://rendertoken.rocket.chat
+      p #RNDR - This is currently the main room to discuss RNDR. Find specific topics in the other channels or hang out in the #Octane-Bar to get fueled. Find the Render Token FAQ and Buyers Guide.
+      p #.Announcements - Official news from the RNDR team
+      p #Alpha_Testing - Feedback, bug reporting and technical support for the first test release of the ORBX launcher and system tray applet (for Windows 7 and higher).
+      p #Meta - Philosophical, technical and hypothetical discussions about the metaverse incl topics like Ligthfield Displays, VR/AR, AI, Interfaces, Simulation Theory, Social Impact
+      p #Octane-Bar - Bar for the octane fueled computer graphics community to hang out, chit-chat and complain about their clients.
+      p #Photonomics - Lengthy discussion mainly about token economics and Phase 4 - A Photon Driven Economy. Speculating about market mechanics, price development, demand for RNDR and potential threats. Sharing information related to market in general and future opportunities of RNDR. Translating the vision behind RNDR into layman terms.
+      p #RNDR-Mine - Underground hideout for former miners which want to convert to highly profitable renderers. Discuss topics like Beta (Phase 2), Specs, GPUs, Profitability, Best practices, Software, Reputation Score, Job Allocation, Fees, Pools. Check first BetaParticipation and Technology in the FAQ before asking general questions.
+      p #Support - If you need help leave a message here an we will get back to you. Before asking please make sure you have checked the Render Token FAQ.
+      h6 Medium
+      p: a(href='https://medium.com/render-token') https://medium.com/render-token
+      h6 Twitter
+      p: a(href='https://medium.com/render-token') https://medium.com/render-token
+      p: +link('https://twitter.com/JulesUrbach/')
+      p: +link('https://twitter.com/OTOY/')
+      h6 Reddit
+      p: +link('https://reddit.com/r/RenderToken')
+      p: +link('https://reddit.com/r/OTOY')
+      h6 Facebook
+      p: +link('https://facebook.com/OTOY')
     +faq('Do you have a White Paper in different languages?')
       p Yes, the white paper is translated to three different languages that can be found on our website. The languages are:
-    +faq('Is there a bounty program?')
+      ul
+        li: a(href='https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Korean.pdf') 🇰🇷  Korean
+        li: a(href='https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Russian.pdf') 🇷🇺  Russian
+        li: a(href='https://rendertoken.com/pdf/1.2.1RenderTokenWhitepaper_Chinese.pdf') 🇨🇳  Chinese
