--- a/src/pug/faqs/navigation.pug
+++ b/src/pug/faqs/navigation.pug
@@ -1,7 +1,36 @@
-nav(css-module='faqs.navigation.wrapper' data-gumshoe-header)
-  .container-620
-    ul(css-module='faqs.navigation.links' data-gumshoe)
-      li: a.active(href='#general') General
-      li: a(href='#value') Value Proposition
-      li: a(href='#token') Token Sale
-      li: a(href='#post') Post Sale
+mixin nav1
+  nav(css-module='faqs.navigation.wrapper')
+    .container-620
+      ul(css-module='faqs.navigation.links')
+        li: a.active(href='#general') General
+        li: a(href='#value') Value Proposition
+        li: a(href='#token') Token Sale
+        li: a(href='#post') Post Sale
+
+mixin nav2
+  nav(css-module='faqs.navigation.wrapper')
+    .container-620
+      ul(css-module='faqs.navigation.links')
+        li: a(href='#general') General
+        li: a.active(href='#value') Value Proposition
+        li: a(href='#token') Token Sale
+        li: a(href='#post') Post Sale
+
+mixin nav3
+  nav(css-module='faqs.navigation.wrapper')
+    .container-620
+      ul(css-module='faqs.navigation.links')
+        li: a(href='#general') General
+        li: a(href='#value') Value Proposition
+        li: a.active(href='#token') Token Sale
+        li: a(href='#post') Post Sale
+
+mixin nav4
+  nav(css-module='faqs.navigation.wrapper')
+    .container-620
+      ul(css-module='faqs.navigation.links')
+        li: a(href='#general') General
+        li: a(href='#value') Value Proposition
+        li: a(href='#token') Token Sale
+        li: a.active(href='#post') Post Sale
+
