adding faqs for value

--- a/src/pug/faqs/value.pug
+++ b/src/pug/faqs/value.pug
@@ -1,13 +1,29 @@
 section#value
   .container-620
     +faq('What is Render Token?')
+      p RNDR is the first network to transform the power of GPU compute into a decentralized economy of connected 3D assets.
+      p We aim to make it possible for any 3D object or environment to be authored, shared, and monetized through the Ethereum blockchain protocol.
+      p The RNDR token is powered by breakthrough cloud rendering technology, creating a distributed global network of millions of peer GPU devices. The future of rendering envisioned.
     +faq('What is OTOY? Who\'s behind RNDR?')
-    +faq('What is the problem RNDR is solving?')
+      p OTOY Inc. is the definitive cloud graphics company, pioneering technology that is redefining content creation and delivery for media and entertainment organizations around the world. OTOY’s Academy Award®-winning technology is used by leading visual effects studios, artists, animators, designers, architects, and engineers, providing unprecedented creative freedom, new levels of realism, and new economics in content creation and distribution powered by the cloud.
+      p It is the creator of the industry leading OctaneRender, the world's first and fastest GPU-accelerated, unbiased, physically correct renderer.
+      p OTOY was founded in 2008 by Jules Urbach (Founder & CEO), Alissa Grainger (Co-Founder & President) and Malcolm Taylor (Co-Founder & CTO).
+      p OTOY has some notable investors and advisers. Advisors include Eric Schmidt of Google, Brendan Eich of Mozilla and Brave, and Ari Emanuel of WME-IMG.
+      p THE RNDR TOKEN IS A UTILITY BACKED BY OTOY.
+    +faq('What is the problem the RNDR Network is solving?')
       p It’s simple: There are around 265 million GPUs in circulation today, but less than 50,000 functioning on the public cloud. If RNDR were to leverage just 1% of the available GPUs out there, then we’d accomplish over 5300% growth in the rendering capacity without any expenditure in infrastructure.
-    +faq('What is the Token purpose? Is it ERC-20 compatible?')
+    +faq('What is the purpose of RNDR? Is it an ERC20 token?')
+      p RNDR will be used as the token to purchase or provide render power through the Ethereum blockchain. The Render Token [symbol: RNDR] is an ERC20 standard token.
     +faq('Why do you need to use the Blockchain?')
+      p Ethereum’s widespread adoption allows us to scale our vision on the blockchain without immediately implementing our own ledger. Furthermore, instead of GPUs being used to only mine currencies, we use their intrinsic function to render and leverage the features of the blockchain:
+      p NETWORK: a decentralized architecture brings together the power of millions of developers and billions of consumers.
+      p INCENTIVES: an equitable 2-sided marketplace motivates everyone to publish and consume - from artists to metadata contributors.
+      p TRUST: An indisputable ledger allows all to create, exchange, and transfer creations securely.
     +faq('Can the tokens be mined?')
+      p No, the ERC20 version of RNDR tokens cannot be mined. We refer to job processing as mining.
     +faq('Is it a Utility Token or a Security Token?')
+      p RNDR is a Utility Token based on Ethereum blockchain. It is NOT a Security Token. Token holders will not receive any profit sharing, dividends or equity in the company.
     +faq('How do I calculate the value of one token?')
+      p 1 RNDR is sold for $0.25 during the token sale. This is the current market price for a base block of rendering power worth of 256 second x 256 OB (OctaneBench) you will be able to buy with a token. Unlike most other tokens, RNDR is mapped to actual rendering work for a set time. 256 second x 256 OB (OctaneBench) of work is currently valued at $0.25 for public cloud GPUs needed to handle daily and weekly demand of ORC jobs (this is our centralized network system). The price is set at what you would get currently on the market – this provides a buffer because if the price does go below $0.25, render users would realize this and drive the price of this work back up to market levels – 25 cents is the current baseline and 25 cents is the price we set it at for this reason.
     +faq('Does OTOY already have their own products? Are there partnerships planned for the RNDR project?')
-    +faq('What are the assets that OTOY is bringing into this project?')
+      p Yes, OTOY is the developer of the Octane Render software, used in high-quality CGI productions like the opening of HBO’s Westworld. Some of our partners include Facebook, Unity and Disney. Please check the #[a(href='https://medium.com/render-token') RNDR Medium page] for constant updates on the project’s development.
