hide last 2 faqs sections

--- a/src/pug/faqs.pug
+++ b/src/pug/faqs.pug
@@ -11,9 +11,9 @@ block content
     include faqs/general
     +nav2
     include faqs/value
-    +nav3
-    include faqs/token
-    +nav4
-    include faqs/post
+    //-+nav3
+    //-include faqs/token
+    //-+nav4
+    //-include faqs/post
   include home/footer
   include home/copyright
