--- a/src/pug/faqs/navigation.pug
+++ b/src/pug/faqs/navigation.pug
@@ -4,8 +4,8 @@ mixin nav1
       ul(css-module='faqs.navigation.links')
         li: a.active(href='#general') General
         li: a(href='#value') Value Proposition
-        li: a(href='#token') Token Sale
-        li: a(href='#post') Post Sale
+        //-li: a(href='#token') Token Sale
+        //-li: a(href='#post') Post Sale
 
 mixin nav2
   nav(css-module='faqs.navigation.wrapper')
@@ -13,8 +13,8 @@ mixin nav2
       ul(css-module='faqs.navigation.links')
         li: a(href='#general') General
         li: a.active(href='#value') Value Proposition
-        li: a(href='#token') Token Sale
-        li: a(href='#post') Post Sale
+        //-li: a(href='#token') Token Sale
+        //-li: a(href='#post') Post Sale
 
 mixin nav3
   nav(css-module='faqs.navigation.wrapper')
@@ -33,4 +33,3 @@ mixin nav4
         li: a(href='#value') Value Proposition
         li: a(href='#token') Token Sale
         li: a.active(href='#post') Post Sale
-
