--- a/src/assets/styles/main/home/project-status.scss
+++ b/src/assets/styles/main/home/project-status.scss
@@ -33,7 +33,7 @@
   display: none;
   @include breakpoint(desktop) {
     display: block;
-    max-width: 100%;
+    max-width: 295px;
     margin-left: auto;
     margin-right: auto;
   }
